@@ -120,6 +120,20 @@ name|hadoop
 operator|.
 name|mapreduce
 operator|.
+name|MRConfig
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|mapreduce
+operator|.
 name|MRJobConfig
 import|;
 end_import
@@ -327,6 +341,50 @@ operator|.
 name|job
 operator|.
 name|TaskAttempt
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|mapreduce
+operator|.
+name|v2
+operator|.
+name|app
+operator|.
+name|job
+operator|.
+name|event
+operator|.
+name|JobEvent
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|mapreduce
+operator|.
+name|v2
+operator|.
+name|app
+operator|.
+name|job
+operator|.
+name|event
+operator|.
+name|JobEventType
 import|;
 end_import
 
@@ -558,7 +616,43 @@ name|api
 operator|.
 name|records
 operator|.
+name|ApplicationAttemptId
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|yarn
+operator|.
+name|api
+operator|.
+name|records
+operator|.
 name|Container
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|yarn
+operator|.
+name|api
+operator|.
+name|records
+operator|.
+name|ContainerId
 import|;
 end_import
 
@@ -647,6 +741,22 @@ operator|.
 name|providers
 operator|.
 name|RecordFactoryProvider
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|yarn
+operator|.
+name|util
+operator|.
+name|Clock
 import|;
 end_import
 
@@ -2653,6 +2763,310 @@ argument_list|)
 argument_list|)
 expr_stmt|;
 comment|//this must lead to job error
+name|app
+operator|.
+name|waitForState
+argument_list|(
+name|job
+argument_list|,
+name|JobState
+operator|.
+name|ERROR
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Test
+DECL|method|testJobRebootNotLastRetry ()
+specifier|public
+name|void
+name|testJobRebootNotLastRetry
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|MRApp
+name|app
+init|=
+operator|new
+name|MRApp
+argument_list|(
+literal|1
+argument_list|,
+literal|0
+argument_list|,
+literal|false
+argument_list|,
+name|this
+operator|.
+name|getClass
+argument_list|()
+operator|.
+name|getName
+argument_list|()
+argument_list|,
+literal|true
+argument_list|)
+decl_stmt|;
+name|Job
+name|job
+init|=
+name|app
+operator|.
+name|submit
+argument_list|(
+operator|new
+name|Configuration
+argument_list|()
+argument_list|)
+decl_stmt|;
+name|app
+operator|.
+name|waitForState
+argument_list|(
+name|job
+argument_list|,
+name|JobState
+operator|.
+name|RUNNING
+argument_list|)
+expr_stmt|;
+name|Assert
+operator|.
+name|assertEquals
+argument_list|(
+literal|"Num tasks not correct"
+argument_list|,
+literal|1
+argument_list|,
+name|job
+operator|.
+name|getTasks
+argument_list|()
+operator|.
+name|size
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|Iterator
+argument_list|<
+name|Task
+argument_list|>
+name|it
+init|=
+name|job
+operator|.
+name|getTasks
+argument_list|()
+operator|.
+name|values
+argument_list|()
+operator|.
+name|iterator
+argument_list|()
+decl_stmt|;
+name|Task
+name|task
+init|=
+name|it
+operator|.
+name|next
+argument_list|()
+decl_stmt|;
+name|app
+operator|.
+name|waitForState
+argument_list|(
+name|task
+argument_list|,
+name|TaskState
+operator|.
+name|RUNNING
+argument_list|)
+expr_stmt|;
+comment|//send an reboot event
+name|app
+operator|.
+name|getContext
+argument_list|()
+operator|.
+name|getEventHandler
+argument_list|()
+operator|.
+name|handle
+argument_list|(
+operator|new
+name|JobEvent
+argument_list|(
+name|job
+operator|.
+name|getID
+argument_list|()
+argument_list|,
+name|JobEventType
+operator|.
+name|JOB_AM_REBOOT
+argument_list|)
+argument_list|)
+expr_stmt|;
+comment|// return exteranl state as RUNNING since otherwise the JobClient will
+comment|// prematurely exit.
+name|app
+operator|.
+name|waitForState
+argument_list|(
+name|job
+argument_list|,
+name|JobState
+operator|.
+name|RUNNING
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Test
+DECL|method|testJobRebootOnLastRetry ()
+specifier|public
+name|void
+name|testJobRebootOnLastRetry
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+comment|// make startCount as 2 since this is last retry which equals to
+comment|// DEFAULT_MAX_AM_RETRY
+name|MRApp
+name|app
+init|=
+operator|new
+name|MRApp
+argument_list|(
+literal|1
+argument_list|,
+literal|0
+argument_list|,
+literal|false
+argument_list|,
+name|this
+operator|.
+name|getClass
+argument_list|()
+operator|.
+name|getName
+argument_list|()
+argument_list|,
+literal|true
+argument_list|,
+literal|2
+argument_list|)
+decl_stmt|;
+name|Configuration
+name|conf
+init|=
+operator|new
+name|Configuration
+argument_list|()
+decl_stmt|;
+name|Job
+name|job
+init|=
+name|app
+operator|.
+name|submit
+argument_list|(
+name|conf
+argument_list|)
+decl_stmt|;
+name|app
+operator|.
+name|waitForState
+argument_list|(
+name|job
+argument_list|,
+name|JobState
+operator|.
+name|RUNNING
+argument_list|)
+expr_stmt|;
+name|Assert
+operator|.
+name|assertEquals
+argument_list|(
+literal|"Num tasks not correct"
+argument_list|,
+literal|1
+argument_list|,
+name|job
+operator|.
+name|getTasks
+argument_list|()
+operator|.
+name|size
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|Iterator
+argument_list|<
+name|Task
+argument_list|>
+name|it
+init|=
+name|job
+operator|.
+name|getTasks
+argument_list|()
+operator|.
+name|values
+argument_list|()
+operator|.
+name|iterator
+argument_list|()
+decl_stmt|;
+name|Task
+name|task
+init|=
+name|it
+operator|.
+name|next
+argument_list|()
+decl_stmt|;
+name|app
+operator|.
+name|waitForState
+argument_list|(
+name|task
+argument_list|,
+name|TaskState
+operator|.
+name|RUNNING
+argument_list|)
+expr_stmt|;
+comment|//send an reboot event
+name|app
+operator|.
+name|getContext
+argument_list|()
+operator|.
+name|getEventHandler
+argument_list|()
+operator|.
+name|handle
+argument_list|(
+operator|new
+name|JobEvent
+argument_list|(
+name|job
+operator|.
+name|getID
+argument_list|()
+argument_list|,
+name|JobEventType
+operator|.
+name|JOB_AM_REBOOT
+argument_list|)
+argument_list|)
+expr_stmt|;
+comment|// return exteranl state as ERROR if this is the last retry
 name|app
 operator|.
 name|waitForState
